# BookShelf

backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fake_data.py  import_books.py  pyproject.toml  seed.py  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 387a3f7fd520_initial_schema.py  b8f3a92d1e05_indexes_and_fulltext.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  book.py  list_.py  reading.py  review.py  user.py
backend/app/routers/: auth.py  books.py  discover.py  lists.py  readings.py  reviews.py  stats.py  users.py
backend/app/schemas/: book.py  common.py  list_.py  reading.py  review.py  user.py
backend/app/services/: auth_service.py  book_service.py  list_service.py  openlibrary.py  reading_service.py  review_service.py  stats_service.py  user_service.py
backend/src/: main.py
backend/tests/: conftest.py  test_auth.py  test_readings.py  test_reviews.py
frontend/: .env  .env.example  AGENTS.md  API_CONTRACT.md  App.tsx  README.md  app.json  babel.config.js  eas.json  index.ts  package-lock.json  package.json  readme.md
frontend/src/: config.ts
frontend/src/api/: auth.ts  books.ts  client.ts  lists.ts  readings.ts  reviews.ts  stats.ts  users.ts
frontend/src/components/: AppButton.tsx  Avatar.tsx  BarChart.tsx  BookCard.tsx  BookCover.tsx  EmptyState.tsx  ErrorState.tsx  FormTextInput.tsx  Toast.tsx  (+9 more)
specs/: especificacao_aplicacao.md  historias_de_usuario.md  prompt-frontend-agent.md  prompt-mockup-agent.md  prompt_agente_backend.md
(+90 files in other folders)
